--- a/index.htm
+++ b/index.htm
@@ -49,7 +49,7 @@ var margin = {top: 1, right: 1, bottom: 6, left: 1},
     height = 720 - margin.top - margin.bottom;
 
 var formatNumber = d3.format(",.0f"),
-    format = function(d) { return "Transaction ammount: $" + formatNumber(d); },
+    format = function(d) { return "Transaction amount: $" + formatNumber(d); },
     color = d3.scale.category20();
 
 var svg = d3.select("#chart").append("svg")
@@ -121,5 +121,31 @@ d3.json("energy.json", function(energy) {
 
 </script>
 
+<script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	
+	<!--CASEY DO-->
+	
+	<script type="text/javascript">
+	
+	var d3Globals = function() {
+		var width = 1380,
+		height = 740,
+		cellColorA = '#EAEAEA',
+		cellColorB = '#FFFFFF';
+	}
+	
+	function drawGraphs(){
+		var outerRadius = 200;
+		var innerRadius = 0;
+		var pie = d3.layout.pie();
+		var color = d3.scale.category10();
+		var arc = d3.svg.arc().innerRadius(innerRadius).outerRadius(outerRadius);
+		
+		
+	}
+	
+
+	</script>
 </body>
 </html>
