--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,7 @@ $("#btn").click(function() {
 		success: function(data) {
 			$('div#result').text("Address: " + data);
 		},
-		"error": function(xOptions, textStatus) {
+		error: function(xOptions, textStatus) {
 			alert(textStatus + ". Something went wrong with address " + xOptions);
 		}
 	});
