let's try chrome

--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html class="ocks-org do-not-copy">
 <head>
 	<meta charset="utf-8" />
@@ -50,7 +49,7 @@
 
 <script src="vis.js"></script>
 
-<script type="application/json">
+<script type="application/javascript">
 
 $("#btn").click(function() {
 
