--- a/index.htm
+++ b/index.htm
@@ -55,22 +55,56 @@ $("#btn").click(function() {
 
 	var currentAddress = document.getElementById('txt').value;
 	
-	$.ajax({
-		url: "http://blockchain.info/address/" + currentAddress + "?cors=true",
-		dataType: 'text json',
-		data: {},
-		success: function(data) {
-			$('div#result').text("Address: " + data);
-		},
-		error: function(xOptions, textStatus) {
-			alert(textStatus + ". Something went wrong with address " + xOptions);
-		},
-		complete: function() {
-			console.log("Finished...");
-		}
-	});
+	// Make the actual CORS request.
+	function makeCorsRequest() {
+	  // All HTML5 Rocks properties support CORS.
+	  var url = 'http://blockchain.info/address/' + currentAddress + '?cors=true';
+
+	  var xhr = createCORSRequest('GET', url);
+	  if (!xhr) {
+		alert('CORS not supported');
+		return;
+	  }
+
+	  // Response handlers.
+	  xhr.onload = function() {
+		var text = xhr.responseText;
+		var title = getTitle(text);
+		alert('Response from CORS request to ' + url + ': ' + title);
+	  };
+
+	  xhr.onerror = function() {
+		alert('Woops, there was an error making the request.');
+	  };
+
+	  xhr.send();
+	}
 	
 });
+
+<!-- http://www.html5rocks.com/en/tutorials/cors/ -->
+
+// Create the XHR object.
+function createCORSRequest(method, url) {
+  var xhr = new XMLHttpRequest();
+  if ("withCredentials" in xhr) {
+    // XHR for Chrome/Firefox/Opera/Safari.
+    xhr.open(method, url, true);
+  } else if (typeof XDomainRequest != "undefined") {
+    // XDomainRequest for IE.
+    xhr = new XDomainRequest();
+    xhr.open(method, url);
+  } else {
+    // CORS not supported.
+    xhr = null;
+  }
+  return xhr;
+}
+
+// Helper method to parse the title tag from the response.
+function getTitle(text) {
+  return text.match('<title>(.*)?</title>')[1];
+}
 
 </script>
 	
