--- a/1ARrjUXpovmocFwBjatYovy2EonwxWhzRR.htm
+++ b/1ARrjUXpovmocFwBjatYovy2EonwxWhzRR.htm
@@ -184,6 +184,8 @@
 	
 	<p>Each node represents an address. The lines represent transactions between nodes. Nodes on the left are sending bitcoins to nodes on the right.</p>
 
+	<script src "pieInputs.js"></script>
+	
 </div>
 
 
